# ohal

./: .clang-format  .clang-tidy  .gitignore  .markdownlint.json  .yamllint.yml  CMakeLists.txt  README.md  commitlint.config.mjs  lint.sh  package.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/instructions/: testing.instructions.md
.github/workflows/: conventional-commits.yml  copilot-setup-steps.yml  lint.yml  zizmor.yml
build_test/: CTestTestfile.cmake
docs/: plan.md
docs/contributor/: adding-mcu.md  adding-peripheral.md  architecture.md  specs.md
docs/specs/: README.md  future_improvements.md  schema-arch.json  schema-model.json  schema.json
docs/steps/: step-01-build-infrastructure.md  step-02-linting-formatting.md  step-02-register-abstraction.md  step-03-bitfield-access-control.md  step-03-conventional-commits-merge-queue.md  step-03-register-abstraction.md  step-04-bitfield-access-control.md  step-04-mcu-selection.md  step-04-register-abstraction.md  step-05-bitfield-access-control.md  step-05-gpio-interface.md  step-05-mcu-selection.md  step-06-gpio-interface.md  step-06-mcu-selection.md  step-06-stm32u0-gpio.md  step-07-gpio-interface.md  step-07-pic18f4550-gpio.md  step-07-stm32u0-gpio.md  step-07-timer-uart.md  step-08-pic18f4550-gpio.md  step-08-stm32u0-gpio.md  step-08-timer-uart.md  step-09-msp430fr2355-gpio.md  step-09-pic18f4550-gpio.md  step-09-timer-uart.md  step-09-unit-testing.md  step-10-ci.md  step-10-timer-uart.md  step-10-unit-testing.md  step-11-ci.md  step-11-linting-formatting.md  step-11-release-automation.md  step-11-unit-testing.md  step-12-ci.md  step-12-release-automation.md  step-12-vcpkg-package.md  step-13-additional-mcu-families.md  step-13-release-automation.md  (+7 more)
tests/host/: CMakeLists.txt  main.cpp  test_bitfield.cpp  test_gpio.cpp  test_gpio_stm32u083.cpp  test_register.cpp
tests/host/mock/: mock_register.hpp
(+20 files in other folders)
